added schema and sitemap.xml

--- a/corporate-travel/flight-booking.html
+++ b/corporate-travel/flight-booking.html
@@ -88,6 +88,21 @@
 
     gtag("config", "G-T86CD36EWT");
   </script>
+  <script type="application/ld+json">
+{
+  "@context": "http://schema.org",
+  "@type": "Product",
+  "name": "Air Ticketing Agency in Pune",
+  "image": "https://www.new.valiantbusinesssolutions.com/assets/images/services/Fligh-booking-VBS.png",
+  "description": "Looking for affordable and reliable flight booking in Pune?\n                  <SPAN>Welcome to VBS</SPAN>\n                  your trusted travel partner for domestic and international air ticket booking in Pune.\n                  Whether you’re flying for leisure, business, or education, our expert team ensures you get the best\n                  deals, flexible options, and hassle-free booking support - all under one roof.",
+  "brand": {
+    "@type": "Brand",
+    "name": "VBS",
+    "logo": "https://www.new.valiantbusinesssolutions.com/assets/images/logo/VBS%20FINAL%20LOGO%20white.png"
+  }
+}
+</script>
+
 </head>
 
 <body class="parallax-visible">
