--- a/corporate-travel/forex.html
+++ b/corporate-travel/forex.html
@@ -88,6 +88,21 @@
 
     gtag("config", "G-T86CD36EWT");
   </script>
+  <script type="application/ld+json">
+{
+  "@context": "http://schema.org",
+  "@type": "Product",
+  "name": "Forex Exchange Services in Pune",
+  "image": "https://www.new.valiantbusinesssolutions.com/assets/images/services/Forex-exchnage-service-VBS.png",
+  "description": "A prepaid Forex card is a travel agency&#39;s best recommendation for hassle-free international\n                  transactions. It allows clients to load multiple foreign currencies onto a single card, offering\n                  convenience, security, and competitive exchange rates. Simplifying currency management, ensures\n                  cost-effective and efficient handling of travel expenses, enhancing customer satisfaction. The best\n                  option for frequent travelers",
+  "brand": {
+    "@type": "Brand",
+    "name": "VBS",
+    "logo": "https://www.new.valiantbusinesssolutions.com/assets/images/logo/VBS%20FINAL%20LOGO%20white.png"
+  }
+}
+</script>
+
 </head>
 
 <body class="parallax-visible">
