--- a/corporate-travel/hotel-booking.html
+++ b/corporate-travel/hotel-booking.html
@@ -122,6 +122,21 @@ height: 150px!important;
 
       gtag("config", "G-T86CD36EWT");
     </script>
+    <script type="application/ld+json">
+{
+  "@context": "http://schema.org",
+  "@type": "Product",
+  "name": "Top Hotel Booking Agency in Pune",
+  "image": "https://www.new.valiantbusinesssolutions.com/assets/images/services/Hotel-booking-service-VBS.png",
+  "description": "Finding the perfect place to stay while traveling shouldn’t be stressful - and with VBS, it never is. As a leading hotel booking service provider in Pune, we make it effortless for you to find, compare, and book hotels that perfectly match your travel style, budget, and preferences.\n\nWhether you’re planning a business trip, a family vacation, or an international getaway, our expert team takes care of everything - from selecting hotels in prime locations to confirming reservations quickly and securely. We partner with top-rated hotels and resorts worldwide, known for their exceptional comfort, scenic views, and outstanding hospitality.",
+  "brand": {
+    "@type": "Brand",
+    "name": "VBS",
+    "logo": "https://www.new.valiantbusinesssolutions.com/assets/images/logo/VBS%20FINAL%20LOGO%20white.png"
+  }
+}
+</script>
+
   </head>
 
   <body class="parallax-visible">
