--- a/corporate-travel/index.html
+++ b/corporate-travel/index.html
@@ -91,6 +91,32 @@
             }
 }
           </style>
+          <script type="application/ld+json">
+{
+  "@context": "http://schema.org",
+  "@type": "LocalBusiness",
+  "name": "Corporate Travel Management with Valiant Business Solutions",
+  "image": "https://www.new.valiantbusinesssolutions.com/assets/images/corporate/489.png",
+  "telephone": "91 782-102-1521",
+  "email": "connect@valiantbusinesssolutions.com",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "Undri",
+    "addressLocality": "Pune",
+    "addressRegion": "Maharashtra",
+    "postalCode": "411060"
+  },
+  "review": {
+    "@type": "Review",
+    "author": {
+      "@type": "Person",
+      "name": "Jyoti Chauhan"
+    },
+    "reviewBody": "His attention to detail and thoroughness ensured that every aspect of my\n                                            travel and visa arrangements was carefully handled. His in-depth knowledge\n                                            and valuable advice made me feel confident and well-prepared throughout the\n                                            process."
+  }
+}
+</script>
+
   </head>
 
   <body class="parallax-visible">
