--- a/corporate-travel/mice.html
+++ b/corporate-travel/mice.html
@@ -88,6 +88,21 @@
 
     gtag("config", "G-T86CD36EWT");
   </script>
+  <script type="application/ld+json">
+{
+  "@context": "http://schema.org",
+  "@type": "Product",
+  "name": "MICE Services in Pune",
+  "image": "https://www.new.valiantbusinesssolutions.com/assets/images/services/MIC-VBS.png",
+  "description": "At VBS, we specialize in delivering seamless\n                  <SPAN>MICE (Meetings, Incentives, Conferences, and\n                    Events)</SPAN>\n                  solutions for corporate clients across India and abroad. As\n                  a leading\n                  <STRONG>corporate travel management company in Pune</STRONG>, we combine travel expertise with event\n                  management\n                  excellence to help your business create impactful\n                  experiences — whether it’s a high-profile conference, a\n                  reward trip, or a team-building retreat",
+  "brand": {
+    "@type": "Brand",
+    "name": "VBS",
+    "logo": "https://www.new.valiantbusinesssolutions.com/assets/images/logo/VBS%20FINAL%20LOGO%20white.png"
+  }
+}
+</script>
+
 </head>
 
 <body class="parallax-visible">
