--- a/corporate-travel/travel-insurance.html
+++ b/corporate-travel/travel-insurance.html
@@ -88,6 +88,21 @@
 
     gtag("config", "G-T86CD36EWT");
   </script>
+  <script type="application/ld+json">
+{
+  "@context": "http://schema.org",
+  "@type": "Product",
+  "name": "Travel Insurance in Pune",
+  "image": "https://www.new.valiantbusinesssolutions.com/assets/images/services/Travel-asurance-service-VBS.png",
+  "description": "At VBS, we understand that even the best-planned trips can face unforeseen challenges.\n                  That’s why our\n                  <STRONG>travel insurance in Pune</STRONG>is carefully designed to offer you maximum protection and\n                  hassle-free support - no matter where in the world you go.",
+  "brand": {
+    "@type": "Brand",
+    "name": "VBS",
+    "logo": "https://www.new.valiantbusinesssolutions.com/assets/images/logo/VBS%20FINAL%20LOGO%20white.png"
+  }
+}
+</script>
+
 </head>
 
 <body class="parallax-visible">
