--- a/corporate-travel/visa-assistance.html
+++ b/corporate-travel/visa-assistance.html
@@ -90,6 +90,21 @@
 
     gtag("config", "G-T86CD36EWT");
   </script>
+  <script type="application/ld+json">
+{
+  "@context": "http://schema.org",
+  "@type": "Product",
+  "name": "Visa Assistance Service in Pune",
+  "image": "https://www.new.valiantbusinesssolutions.com/assets/images/services/visa-service-VBS.png",
+  "description": "VBS is a leading visa assistance agency in Pune\n                  helping individuals, students, and professionals with fast, reliable, and hassle-free visa support.\n                  Whether you need help with\n                  <STRONG>tourist visas, business visas, student visas, or work permits</STRONG>, our team of certified\n                  visa consultants in Pune helps you simplify the visa process, reduce rejection risks, and get\n                  approvals quickly.",
+  "brand": {
+    "@type": "Brand",
+    "name": "VBS",
+    "logo": "https://www.new.valiantbusinesssolutions.com/assets/images/logo/VBS%20FINAL%20LOGO%20white.png"
+  }
+}
+</script>
+
 </head>
 
 <body class="parallax-visible">
