--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
     <!-- Required meta tags -->
-    <title>Consultancy Company In Pune | Tours And Travels Agency | HR Recruitment Company In Pune, India | VBS</title>
+    <title>Tours And Travels Agency | Corporate Travel Management Company in Pune | VBS</title>
     <meta name="description"
-        content="Valiant Business Solution is a versatile firm offering HR consultancy and recruitment services, along with personalized travel packages. We are dedicated to empowering businesses by satisfying our customers through our services. Contact us to know more.">
+        content="VBS offers comprehensive corporate travel management in Pune—covering flights, hotels, MICE, visa, and forex services for your business needs.">
     <meta name="keywords"
-        content="Consultancy_Company_In_Pune , Tours_And_Travels_Agency , HR_Recruitment_Company_In_Pune , Job_Placement_Company , VBS">
+        content="Consultancy_Company_In_Pune , Tours_And_Travels_Agency , Corporate_Travel_Management_Company_In_Pune , Business_Travel_Services VBS">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- For IE -->
@@ -15,9 +15,9 @@
     <meta property='og:site_name' content='VBS' />
     <meta property='og:url' content='https://www.valiantbusinesssolutions.com' />
     <meta property='og:locale' content='en_US' />
-    <meta property='og:title' content=' Leading Consultancy Agency In Pune, India - Valiant Business Solutions' />
+    <meta property='og:title' content=' Corporate Travel Management Service in pune – Valiant Business Solution (VBS) />
     <meta property='og:description'
-        content='  Valiant Business Solution is a versatile firm offering HR consultancy and recruitment services, along with personalized travel packages. We are dedicated to empowering businesses by satisfying our customers through our services. Contact us to know more. ' />
+        content='  VBS is your one-stop partner in Pune for corporate travel, meetings, incentives, conferences, and exhibitions—managed professionally from start to finish. ' />
     <meta property='og:type' content='website' />
 
     <link rel="canonical" href="https://www.valiantbusinesssolutions.com">
