--- a/blog.html
+++ b/blog.html
@@ -125,191 +125,12 @@
         <div class="container">
             <div class="row">
                 <!--Start Single Blog Style7-->
-                <div class="col-lg-4 col-sm-6 offset-sm-3 offset-lg-0">
-                    <div class="blog-card">
-                        <div class="blog-img">
-                            <a href="./vbstravel/budget-friendly-foreign-destinations-from-india">
-                                <img src="./vbstravel/assets/images/blog/budget-friendly-foreign-destinations-from-india2.png"
-                                    alt="Solo Travel In India" title="Solo Travel Journey">
-                            </a>
-                        </div>
-                        <div class="blog-text">
-                            <ul>
-                                <li>
-                                    <i class="far fa-calendar"></i>
-                                    10 february, 2024
-                                </li>
-                            </ul>
-                            <h3>
-                                <a href="./vbstravel/budget-friendly-foreign-destinations-from-india">
-                                    Budget Friendly Foreign Destinations From India
-                                </a>
-                            </h3>
-                            <a href="./vbstravel/budget-friendly-foreign-destinations-from-india" class="blog-btn">
-                                Read More
-
-                            </a>
-                        </div>
-                    </div>
-                </div>
+                
                 <div class="col-lg-4 col-sm-6">
                     <div class="blog-card">
                         <div class="blog-img">
-                            <a href="./corporate-travel/10-essential-tips-on-how-to-create-an-outstanding-resume">
-                                <img src="./corporate-travel/assets/img/blog/10-essential-tips-on-how-to-create-an-outstanding-resume-2.png"  alt="How to Create an Outstanding Resume"
-                                title="Create an Outstanding Resume" >
-                            </a>
-                        </div>
-                        <div class="blog-text">
-                            <ul>
-                                <li>
-                                    <i class='bx bxs-user'></i>
-                                    Admin
-                                </li>
-                                <li>
-                                    <i class='bx bx-calendar'></i>
-                                    25 December, 2023
-                                </li>
-                            </ul>
-
-                            <h3>
-                                <a href="./corporate-travel/10-essential-tips-on-how-to-create-an-outstanding-resume">
-                                    10 Essential Tips on How to Create an Outstanding Resume<br><br>
-                                </a>
-                            </h3>
-
-                            <a href="./corporate-travel/10-essential-tips-on-how-to-create-an-outstanding-resume" class="blog-btn">
-                                Read More
-                                <i class='bx bx-plus bx-spin'></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-6 offset-sm-3 offset-lg-0">
-                    <div class="blog-card">
-                        <div class="blog-img">
-                            <a href="./vbstravel/solo-travel-the-ultimate-guide-to-traveling-alone">
-                                <img src="./vbstravel/assets/images/blog/solo-travel-the-ultimate-guide-to-traveling-alone1.png"
-                                    alt="Solo Travel In India" title="Solo Travel Journey">
-                            </a>
-                        </div>
-                        <div class="blog-text">
-                            <ul>
-                                <li>
-                                    <i class="far fa-calendar"></i>
-                                    22 December, 2023
-                                </li>
-                            </ul>
-                            <h3>
-                                <a href="./vbstravel/solo-travel-the-ultimate-guide-to-traveling-alone">
-                                    Travel Solo: The Ultimate Guide to Traveling Alone
-                                </a>
-                            </h3>
-                            <a href="./vbstravel/solo-travel-the-ultimate-guide-to-traveling-alone" class="blog-btn">
-                                Read More
-
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <div class="blog-card">
-                        <div class="blog-img">
-                            <a href="./corporate-travel/importance-of-work-life-balance-for-employees-and-organizations">
-                                <img src="./corporate-travel/assets/img/blog/importance-of-work-life-balance-for-employees-and-organizations3.png"  alt="The Importance Of Work-Life Balance"
-                                title="Importance Of Work-Life Balance" >
-                            </a>
-                        </div>
-                        <div class="blog-text">
-                            <ul>
-                                <li>
-                                    <i class='bx bxs-user'></i>
-                                    Admin
-                                </li>
-                                <li>
-                                    <i class='bx bx-calendar'></i>
-                                    15 December, 2023
-                                </li>
-                            </ul>
-
-                            <h3>
-                                <a href="./corporate-travel/importance-of-work-life-balance-for-employees-and-organizations">
-                                    Importance of Work-Life Balance for Employees and Organizations<br><br>
-                                </a>
-                            </h3>
-
-                            <a href="./corporate-travel/importance-of-work-life-balance-for-employees-and-organizations" class="blog-btn">
-                                Read More
-                                <i class='bx bx-plus bx-spin'></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-6 offset-sm-3 offset-lg-0">
-                    <div class="blog-card">
-                        <div class="blog-img">
-                            <a
-                                href="./vbstravel/best-places-to-visit-in-goa-explore-vibrant-culture-and-stunning-beaches">
-                                <img src="./vbstravel/assets/images/blog/best-places-to-visit-in-goa-explore-vibrant-culture-and-stunning-beaches-3.png"
-                                    alt="Best Places to Visit in Goa" title="Best Places in Goa">
-                            </a>
-                        </div>
-                        <div class="blog-text">
-                            <ul>
-                                <li>
-                                    <i class="far fa-calendar"></i>
-                                    8 December, 2023
-                                </li>
-                            </ul>
-                            <h3>
-                                <a
-                                    href="./vbstravel/best-places-to-visit-in-goa-explore-vibrant-culture-and-stunning-beaches">
-                                    Best Places to Visit in Goa: Explore Vibrant Culture and Stunning Beaches
-                                </a>
-                            </h3>
-                            <a href="./vbstravel/best-places-to-visit-in-goa-explore-vibrant-culture-and-stunning-beaches"
-                                class="blog-btn">
-                                Read More
-
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-6 offset-sm-3 offset-lg-0">
-                    <div class="blog-card">
-                        <div class="blog-img">
-                            <a href="./vbstravel/discover-your-dream-destination-with-our-tours-and-travel-packages">
-                                <img src="./vbstravel/assets/images/blog/discover-your-dream-destination-with-our-tours-and-travel-packages1.png"
-                                    alt="Best Tours and Travel Agency in India | VBS"
-                                    title="Book Affordable Tours & Travel Packages">
-                            </a>
-                        </div>
-                        <div class="blog-text">
-                            <ul>
-                                <li>
-                                    <i class="far fa-calendar"></i>
-                                    30 November, 2023
-                                </li>
-                            </ul>
-                            <h3>
-                                <a
-                                    href="./vbstravel/discover-your-dream-destination-with-our-tours-and-travel-packages">
-                                    Discover Your Dream Destination with our Tours and Travel Packages
-                                </a>
-                            </h3>
-                            <a href="./vbstravel/discover-your-dream-destination-with-our-tours-and-travel-packages"
-                                class="blog-btn">
-                                Read More
-
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <div class="blog-card">
-                        <div class="blog-img">
-                            <a href="./corporate-travel/how-to-make-an-eye-catching-linkedin-profile">
-                                <img src="./corporate-travel/assets/img/blog/how-to-make-an-eye-catching-linkedin-profile1.png" alt="Top Best Job Consultancy In Pune | VBS"
+                            <a href="blogs/corporate-travel-trends-2025">
+                                <img src="../assets/images/blog/Top Corporate Travel Trends-small-img.png" alt="Top Best Job Consultancy In Pune | VBS"
                                 title="How to Make an Eye-Catching LinkedIn Profile">
                             </a>
                         </div>
@@ -321,90 +142,24 @@
                                 </li>
                                 <li>
                                     <i class='bx bx-calendar'></i>
-                                    28 November, 2023
+                                    09 December, 2025
                                 </li>
                             </ul>
 
                             <h3>
-                                <a href="./corporate-travel/how-to-make-an-eye-catching-linkedin-profile">How to Make an Eye-Catching LinkedIn Profile
+                                <a href="blogs/corporate-travel-trends-2025">Top Corporate Travel Trends for 2025: What Businesses Need to Prepare For
                                     <br><br><br>
                                 </a>
                             </h3>
 
-                            <a href="./corporate-travel/how-to-make-an-eye-catching-linkedin-profile" class="blog-btn">
+                            <a href="blogs/corporate-travel-trends-2025" class="blog-btn">
                                 Read More
                                 <i class='bx bx-plus bx-spin'></i>
                             </a>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-sm-6">
-                    <div class="blog-card">
-                        <div class="blog-img">
-                            <a href="./corporate-travel/common-mistakes-to-avoid-during-job-interviews">
-                                <img src="./corporate-travel/assets/img/blog/common-mistakes-to-avoid-during-job-interviews2.png" alt="Top Job Placement Consultancy In Pune | VBS"
-                                title="Top 10 Common Mistake In Job Interviews">
-                            </a>
-                        </div>
-                        <div class="blog-text">
-                            <ul>
-                                <li>
-                                    <i class='bx bxs-user'></i>
-                                    Admin
-                                </li>
-                                <li>
-                                    <i class='bx bx-calendar'></i>
-                                    24 November, 2023
-                                </li>
-                            </ul>
-
-                            <h3>
-                                <a href="./corporate-travel/common-mistakes-to-avoid-during-job-interviews">Common Mistakes To Avoid During The Job Interviews
-                                    <br><br><br>
-                                </a>
-                            </h3>
-
-                            <a href="./corporate-travel/common-mistakes-to-avoid-during-job-interviews" class="blog-btn">
-                                Read More
-                                <i class='bx bx-plus bx-spin'></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-6 offset-sm-3 offset-lg-0">
-                    <div class="blog-card">
-                        <div class="blog-img">
-                            <a
-                                href="./vbstravel/choose-valiant-business-solutions-for-your-unforgettable-travel-experience">
-                                <img src="./vbstravel/assets/images/blog/choose-valiant-business-solutions-for-your-unforgettable-travel-experience2.png"
-                                    alt="Travel Agency in Pune | VBS" title="Travel Company in India">
-                            </a>
-                        </div>
-                        <div class="blog-text">
-                            <ul>
-                                <li>
-                                    <i class="far fa-calendar"></i>
-                                    15 November, 2023
-                                </li>
-                            </ul>
-                            <h3>
-                                <a
-                                    href="./vbstravel/choose-valiant-business-solutions-for-your-unforgettable-travel-experience">
-                                    Choose Valiant Business Solutions for your Unforgettable Travel Experience!
-                                </a>
-                            </h3>
-                            <a href="./vbstravel/choose-valiant-business-solutions-for-your-unforgettable-travel-experience"
-                                class="blog-btn">
-                                Read More
-
-                            </a>
-                        </div>
-                    </div>
-                </div> 
-            </div>
-        </div>
-    </section>
-
+                
     <!-- whatsapp -->
     <span title="Whatsapp"><a
             href="https://api.whatsapp.com/send?phone=917821021521&text=Hi!%20I%20am%20Interested%20In%20Your%20Services."
