--- a/corporate-travel/hotel-booking.html
+++ b/corporate-travel/hotel-booking.html
@@ -82,7 +82,7 @@
     <!-- Dark CSS -->
 
     <!-- Responsive CSS -->
-    <link rel="stylesheet" href="assets/css/responsive.css" />
+    <link rel="stylesheet" href="../assets/css/responsive.css" />
     <link
       rel="stylesheet"
       type="text/css"
