--- a/corporate-travel/hospitality.html
+++ b/corporate-travel/hospitality.html
@@ -44,7 +44,7 @@
     <link rel="stylesheet" href="assets/css/faq-section.css">
 
     <!-- Responsive CSS -->
-    <link rel="stylesheet" href="assets/css/responsive.css">
+    <link rel="stylesheet" href="../assets/css/responsive.css" />
         <link rel="stylesheet" href="../assets/css/module-css/header-section.css" />
     <link rel="stylesheet" href="../assets/css/module-css/footer-section.css" />
     <link
