--- a/corporate-travel/mice.html
+++ b/corporate-travel/mice.html
@@ -52,7 +52,7 @@
   <!-- Dark CSS -->
 
   <!-- Responsive CSS -->
-  <link rel="stylesheet" href="assets/css/responsive.css" />
+    <link rel="stylesheet" href="../assets/css/responsive.css" />
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
   <!-- Favicon -->
   <!-- Google tag (gtag.js) -->
