new blog and 2 new service page added

--- a/blog.html
+++ b/blog.html
@@ -93,7 +93,8 @@
 <body>
     <header-element></header-element>
     <section class="breadcrumb-area">
-        <div class="breadcrumb-area-bg" style="background-image: url(./vbstravel/assets/images/background/about-us-banner.jpg);">
+        <div class="breadcrumb-area-bg"
+            style="background-image: url(./vbstravel/assets/images/background/about-us-banner.jpg);">
         </div>
         <div class="container">
             <div class="row">
@@ -117,21 +118,22 @@
                 }
             </style>
         </div>
-</div>
-</div>
-</section>
+        </div>
+        </div>
+    </section>
     <section class="blog-style7-area">
         <div class="pattern-bg" style="background-image: url(assets/images/pattern/thm-pattern-2.png);"></div>
         <div class="container">
             <div class="row">
                 <!--Start Single Blog Style7-->
-                
+
                 <div class="col-lg-4 col-sm-6">
                     <div class="blog-card">
                         <div class="blog-img">
-                            <a href="blogs/corporate-travel-trends-2025">
-                                <img src="../assets/images/blog/Top Corporate Travel Trends-small-img.png" alt="Top Best Job Consultancy In Pune | VBS"
-                                title="How to Make an Eye-Catching LinkedIn Profile">
+                            <a href="blogs/business-travel-destinations-2025">
+                                <img src="../blogs/assets/img/blog/top-business-destination-small-img.png"
+                                    alt="Top Best Job Consultancy In Pune | VBS"
+                                    title="How to Make an Eye-Catching LinkedIn Profile">
                             </a>
                         </div>
                         <div class="blog-text">
@@ -147,62 +149,63 @@
                             </ul>
 
                             <h3>
-                                <a href="blogs/corporate-travel-trends-2025">Top Corporate Travel Trends for 2025: What Businesses Need to Prepare For
+                                <a href="blogs/business-travel-destinations-2025">Top Corporate Travel Trends for 2025:
+                                    What Businesses Need to Prepare For
                                     <br><br><br>
                                 </a>
                             </h3>
 
-                            <a href="blogs/corporate-travel-trends-2025" class="blog-btn">
+                            <a href="blogs/business-travel-destinations-2025" class="blog-btn">
                                 Read More
                                 <i class='bx bx-plus bx-spin'></i>
                             </a>
                         </div>
                     </div>
                 </div>
-                
-    <!-- whatsapp -->
-    <span title="Whatsapp"><a
-            href="https://api.whatsapp.com/send?phone=917821021521&text=Hi!%20I%20am%20Interested%20In%20Your%20Services."
-            target="_blank" class="WhatsappIcon wmobilIcon"><img
-                src="assets/images/icon/whatspp-icon-green.svg"></a></span>
-    <footer-element></footer-element>
 
-    <!-- whatsapp -->
+                <!-- whatsapp -->
+                <span title="Whatsapp"><a
+                        href="https://api.whatsapp.com/send?phone=917821021521&text=Hi!%20I%20am%20Interested%20In%20Your%20Services."
+                        target="_blank" class="WhatsappIcon wmobilIcon"><img
+                            src="assets/images/icon/whatspp-icon-green.svg"></a></span>
+                        </section>
+                <footer-element></footer-element>
+                <!-- whatsapp -->
 
-    <script src="assets/js/header-footer.js"></script>
-    <script src="assets/slider-script.js"></script>
-    <script src="assets/js/jquery.js"></script>
-    <script src="assets/js/faq.js"></script>
-    <script src="assets/js/aos.js"></script>
-    <script src="assets/js/appear.js"></script>
-    <script src="assets/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/bootstrap-select.min.js"></script>
-    <script src="assets/js/isotope.js"></script>
-    <script src="assets/js/jquery.countTo.js"></script>
-    <script src="assets/js/jquery.easing.min.js"></script>
-    <script src="assets/js/jquery.enllax.min.js"></script>
-    <script src="assets/js/jquery.fancybox.js"></script>
-    <script src="assets/js/jquery.magnific-popup.min.js"></script>
-    <script src="assets/js/jquery.paroller.min.js"></script>
-    <script src="assets/js/jquery-ui.js"></script>
-    <script src="assets/js/map-script.js"></script>
-    <script src="assets/js/owl.js"></script>
-    <script src="assets/js/pagenav.js"></script>
-    <script src="assets/js/parallax.min.js"></script>
-    <script src="assets/js/scrollbar.js"></script>
-    <script src="assets/js/TweenMax.min.js"></script>
-    <script src="assets/js/validation.js"></script>
-    <script src="assets/js/wow.js"></script>
-    <script src="assets/js/jquery-sidebar-content.js"></script>
-    <script src="assets/js/jquery.twentytwenty.js"></script>
-    <script src="assets/js/jquery.event.move.js"></script>
-    <script src="assets/js/element-in-view.js"></script>
-    <script src="assets/js/knob.js"></script>
-    <script src="assets/js/jquery.bootstrap-touchspin.js"></script>
-    <script src="assets/js/jquery.nice-select.min.js"></script>
-    <script src="assets/js/tilt.jquery.js"></script>
-    <!-- thm custom script -->
-    <script src="assets/js/custom.js"></script>
+                <script src="assets/js/header-footer.js"></script>
+                <script src="assets/slider-script.js"></script>
+                <script src="assets/js/jquery.js"></script>
+                <script src="assets/js/faq.js"></script>
+                <script src="assets/js/aos.js"></script>
+                <script src="assets/js/appear.js"></script>
+                <script src="assets/js/bootstrap.bundle.min.js"></script>
+                <script src="assets/js/bootstrap-select.min.js"></script>
+                <script src="assets/js/isotope.js"></script>
+                <script src="assets/js/jquery.countTo.js"></script>
+                <script src="assets/js/jquery.easing.min.js"></script>
+                <script src="assets/js/jquery.enllax.min.js"></script>
+                <script src="assets/js/jquery.fancybox.js"></script>
+                <script src="assets/js/jquery.magnific-popup.min.js"></script>
+                <script src="assets/js/jquery.paroller.min.js"></script>
+                <script src="assets/js/jquery-ui.js"></script>
+                <script src="assets/js/map-script.js"></script>
+                <script src="assets/js/owl.js"></script>
+                <script src="assets/js/pagenav.js"></script>
+                <script src="assets/js/parallax.min.js"></script>
+                <script src="assets/js/scrollbar.js"></script>
+                <script src="assets/js/TweenMax.min.js"></script>
+                <script src="assets/js/validation.js"></script>
+                <script src="assets/js/wow.js"></script>
+                <script src="assets/js/jquery-sidebar-content.js"></script>
+                <script src="assets/js/jquery.twentytwenty.js"></script>
+                <script src="assets/js/jquery.event.move.js"></script>
+                <script src="assets/js/element-in-view.js"></script>
+                <script src="assets/js/knob.js"></script>
+                <script src="assets/js/jquery.bootstrap-touchspin.js"></script>
+                <script src="assets/js/jquery.nice-select.min.js"></script>
+                <script src="assets/js/tilt.jquery.js"></script>
+                <!-- thm custom script -->
+                <script src="assets/js/custom.js"></script>
 
 
 
