--- a/corporate-travel/forex.html
+++ b/corporate-travel/forex.html
@@ -226,7 +226,7 @@
             </button>
             <div class="accordion-content">
               <p class="faqw">
-                Visa Buddy Services is a trusted forex exchange provider in Pune, known for transparent rates, fast service, and hassle-free transactions. Our experts ensure you get the best exchange rates for all major global currencies.
+                VBS is a trusted forex exchange provider in Pune, known for transparent rates, fast service, and hassle-free transactions. Our experts ensure you get the best exchange rates for all major global currencies.
               </p>
               <h3 class="visually-hidden">
                 forex exchange provider in Pune
