--- a/corporate-travel/attestation.html
+++ b/corporate-travel/attestation.html
@@ -23,7 +23,7 @@
     <meta property="og:site_name" content="VBS" />
     <meta
       property="og:url"
-      content="corporate-travel/attestation"
+      content="attestation"
     />
     <meta property="og:locale" content="en_US" />
     <meta
@@ -42,7 +42,7 @@
 
     <link
       rel="canonical"
-      href="corporate-travel/attestation"
+      href="attestation"
     />
     <!-- Favicon  -->
     <link
