--- a/corporate-travel/immigrant-visas.html
+++ b/corporate-travel/immigrant-visas.html
@@ -15,7 +15,7 @@
   <!-- For IE -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta property="og:site_name" content="VBS" />
-  <meta property="og:url" content="corporate-travel/immigrant-visas" />
+  <meta property="og:url" content="immigrant-visas" />
   <meta property="og:locale" content="en_US" />
   <meta property="og:title" content=" Trusted Immigration Services in Pune | PR, Study & Work Visa Specialists " />
   <meta property="og:description"
@@ -23,7 +23,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https://www.valiantbusinesssolutions.com/assets/img/common/c2blue.png" />
 
-  <link rel="canonical" href="corporate-travel/immigrant-visas" />
+  <link rel="canonical" href="immigrant-visas" />
   <!-- Favicon  -->
   <link rel="shortcut icon" type="image/x-icon" href="../../assets/images/logo/Favicon.png" />
   <!-- Bootstrap CSS -->
