--- a/corporate-travel/index.html
+++ b/corporate-travel/index.html
@@ -383,7 +383,7 @@
         <div class="row align-items-center justify-content-center">
           <!-- MICE -->
           <div class="col-lg-4 col-md-4 col-sm-6">
-            <a href="corporate-travel/attestation">
+            <a href="attestation">
               <div class="category-card">
                 <img src="../assets/images/corporate/corporate-event.png" class="wid-5r" /><br /><br />
                 <h3>Attestation/Apostille</h3>
@@ -393,7 +393,7 @@
 
           <!-- Visa Assistance -->
           <div class="col-lg-4 col-md-4 col-sm-6">
-            <a href="corporate-travel/document-legalization">
+            <a href="document-legalization">
               <div class="category-card">
                 <img src="../assets/images/corporate/passport.png" class="wid-5r" /><br /><br />
                 <h3> Document Legalization</h3>
@@ -403,7 +403,7 @@
 
           <!-- Flight Booking -->
           <div class="col-lg-4 col-md-4 col-sm-6">
-            <a href="corporate-travel/immigrant-visas">
+            <a href="immigrant-visas">
               <div class="category-card">
                 <img src="../assets/images/corporate/tour.png" class="wid-5r" /><br /><br />
                 <h3>Immigrant Visas</h3>
